@@ -574,6 +574,7 @@ struct Entity_Player depends (ANM2, ColorMod, KColor, PlayerCostumeMap, Temporar
 	int _headDirectionTime : 0x128c;
 	int _maxHearts : 0x1290, _redHearts : 0x1294,  _eternalHearts : 0x1298, _soulHearts : 0x129C, _blackHearts : 0x12A0;
 	int _gnawedLeafTimer : 0x12c4;
+	short _bloodLustCounter : 0x12cc;	//not sure whether its actually short but we are on x86 so who cares lul
 	int _metronomeCollectibleID : 0x12d8;
 	int _playerType: 0x130c;
 	float _damage : 0x13b8;
@@ -590,6 +591,7 @@ struct Entity_Player depends (ANM2, ColorMod, KColor, PlayerCostumeMap, Temporar
 	float _edenSpeed : 0x1490, _edenFireDelay : 0x1494, _edenDamage : 0x1498, _edenTearRange : 0x149c, _edenShotSpeed : 0x14a0, _edenLuck : 0x14a4;
 	uint32_t _cacheFlags : 0x14b8;
 	ActiveItemDesc _activeDesc[4] : 0x14c4;
+	int _bombPlaceDelay : 0x1544;
 	int _moveDirection : 0x1558;
 	int _headDirection: 0x155c;
 	vector_SmeltedTrinketDesc _smeltedTrinkets : 0x1670;
